[tool.poetry]
name = "flask-alchemist"
version = "0.1.0"
description = ""
authors = ["Rafal Padkowski <rafaelp@poczta.onet.pl>"]
readme = "README.md"
packages = [{include = "flask_alchemist", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
