[tool.poetry]
name = "Flask-Alchemist"
version = "0.1.0"
description = "Alternative to Flask-SQLAlchemy"
authors = ["Rafal Padkowski <rafaelp@poczta.onet.pl>"]
readme = "README.md"
packages = [{ include = "flask_alchemist", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
